#319: Added CommandSecurityDefinitions to GetDepartment and GetDepartments UCs